# Resume_Adaptor

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
profile_adaptor/: __init__.py  __main__.py  cli.py  config.py  event_log.py  models.py  pipeline.py
profile_adaptor/audit/: __init__.py  fidelity.py  match_audit.py
profile_adaptor/checkers/: __init__.py  education.py  job_content.py  job_requirements.py  matching.py  report.py  salary_base.py  skills_match.py  work_experience.py  work_years.py
profile_adaptor/crawler/: __init__.py  jd_crawler.py
profile_adaptor/export/: __init__.py  docx_filler.py  pdf_export.py
profile_adaptor/hitl/: __init__.py  gates.py  template_selector.py
profile_adaptor/llm/: __init__.py  base.py  ollama_client.py  prompts.py  rewriter.py  web_client.py
profile_adaptor/parse/: __init__.py  resume_parser.py
profile_adaptor/tui/: __init__.py  app.py
profile_adaptor/web/: __init__.py  app.py
profile_adaptor/web/templates/: index.html  wizard.html
samples/: sample_jd.txt  sample_resume.docx
templates/: .gitkeep
tests/: test_gap_fill.py
